<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>CFE</groupId>
  <artifactId>CFE</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>Convergent Functional Evidence (CFE) Wizard Web Application</name>
  <url>TBA</url>

  <dependencies>

    <!-- log4j -->
    <!--
    <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>2.17.1</version>
    </dependency>

    <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>2.17.1</version>
    </dependency>

    <dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-simple</artifactId>
	    <version>1.7.30</version>
    </dependency>
    
    <dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>1.7.30</version>
	</dependency>
    -->
	
    <!-- Servlet -->
    <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>4.0.1</version>
        <scope>provided</scope>
    </dependency>

    <!-- JUnit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

	<!-- MSAccess Support -->
	<dependency>
		<groupId>com.healthmarketscience.jackcess</groupId>
		<artifactId>jackcess</artifactId>
		<version>4.0.1</version>
	</dependency>
            
	<!-- Hibernate -->
	<dependency>
  		<groupId>org.hibernate</groupId>
  		<artifactId>hibernate-entitymanager</artifactId>
  		<version>5.4.22.Final</version>
	</dependency>

    <!-- For C3P0ConnectionProvider -->
    <dependency>
	<groupId>org.hibernate</groupId>
		<artifactId>hibernate-c3p0</artifactId>
		<version>5.4.22.Final</version>
	</dependency>

	<!-- End of Used by hibernate core to handle metadata -->

    <!-- Flyway - for database migrations -->
    <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-core</artifactId>
        <version>7.3.0</version>
    </dependency>

    <!-- MySQL -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.27</version>
      <!-- <version>8.0.16</version> -->
    </dependency>
	
    
    <dependency>
      <groupId>org.apache.struts</groupId>
	  <artifactId>struts2-core</artifactId>
      <version>2.5.30</version>
    </dependency>
    
    <!-- Maven war plugin -->
    <dependency>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-war-plugin</artifactId>
      <version>3.3.1</version>
    </dependency>

    <!-- SQL Plug in -->
    <dependency>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>sql-maven-plugin</artifactId>
      <version>1.5</version>
    </dependency>
		
    <!--  Apache POI, for Office Documents, for example, Excel -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>4.1.2</version>
    </dependency>
    
    <!-- 
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>jquery</artifactId>
      <version>3.6.0</version>
    </dependency>
    -->
        
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>4.1.2</version>
    </dependency>
        
    <!-- Tiles -->
    <dependency>
      <groupId>org.apache.struts</groupId>
      <artifactId>struts2-tiles-plugin</artifactId>
      <version>2.5.30</version>
    </dependency>

    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>4.0</version>
    </dependency>

<dependency>
    <groupId>org.webjars</groupId>
    <artifactId>jquery</artifactId>
    <version>3.6.0</version>
</dependency>
      		
  </dependencies>
  
  <build>
   <pluginManagement>
      <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
            <source>1.8</source>
            <target>1.8</target>
        </configuration>
    </plugin>
        <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat6-maven-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat7-maven-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <plugin>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <pde>true</pde>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
      </plugin>
         <plugin>
        	<groupId>org.codehaus.mojo</groupId>
        	<artifactId>sql-maven-plugin</artifactId>
        	<version>1.5</version>
            <!--
			<dependencies>
					<dependency>
      					<groupId>mysql</groupId>
      					<artifactId>mysql-connector-java</artifactId>
      					<version>5.1.25</version>
    				</dependency>
			</dependencies>
            -->
 			<configuration>
                <rulesUri>file:///${project.basedir}/rules.xml</rulesUri>
                <!--
          		<driver>com.mysql.jdbc.Driver</driver>
          		<url>jdbc:mysql://localhost:3306/cfe</url>
          		<username>root</username>
          		<password>datimes</password>
          		<settingsKey>sensibleKey</settingsKey>
                -->
          		<!--all executions are ignored if -Dmaven.test.skip=true-->
          		<skip>${maven.test.skip}</skip>
        	</configuration>

        	<executions>
        		<execution>
        			<id>default-cli</id>
            		<phase>process-test-resources</phase>
            		<goals>
              			<goal>execute</goal>
            		</goals>
            		<configuration>
              			<autocommit>true</autocommit>
              			<srcFiles>
              				<srcFile>src/main/sql/create_db.sql</srcFile>
              			</srcFiles>
            		</configuration>
          		</execution>
				<execution>
            		<id>create-schema</id>
            		<phase>process-test-resources</phase>
            		<goals>
              			<goal>execute</goal>
            		</goals>
            		<configuration>
              			<autocommit>true</autocommit>
              			<srcFiles>
                			<srcFile>src/main/sql/getDiseaseOptions.sql</srcFile>
              			</srcFiles>
            		</configuration>
          		</execution>
 			</executions>
		</plugin>
            </plugins>
 </pluginManagement>
    <finalName>CFE</finalName>
  </build>
</project>
